--- a/src/app/features/user/pages/auth/auth.component.scss
+++ b/src/app/features/user/pages/auth/auth.component.scss
@@ -1,8 +1,3 @@
-.auth-container {
-  padding-left: 20rem;
-  padding-right: 20rem;
-}
-
 .social-button-container {
   p-button {
     width: 100%;
@@ -15,6 +10,18 @@
 
 .sign-in-button {
   .p-button {
+    width: 100%;
+  }
+}
+
+p-calendar {
+  width: 100%;
+}
+
+p-dropdown {
+  width: 100%;
+
+  .p-inputwrapper {
     width: 100%;
   }
 }
