--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -32,13 +32,12 @@
         <p-button
           label="Log in"
           [routerLink]="['/auth']"
-          [queryParams]="{ type: 'SignIn' }"
           [outlined]="true"
         ></p-button>
         <p-button
           label="Sign Up"
           [routerLink]="['/auth']"
-          [queryParams]="{ type: 'SignUp' }"
+          [queryParams]="{ type: '1' }"
           [outlined]="true"
           severity="secondary"
         ></p-button>
