--- a/src/app/features/projects/components/project-line/project-line.component.html
+++ b/src/app/features/projects/components/project-line/project-line.component.html
@@ -1,4 +1,6 @@
-<div class="shadow-2 flex gap-2 justify-content-between p-3">
+<div
+  class="shadow-2 surface-card border-round flex gap-2 justify-content-between p-3"
+>
   <img
     class="w-9rem block"
     [src]="project?.projectImgUrl"
