feat: implement project creation

--- a/src/app/features/projects/components/create-project-dialog/create-project-dialog.component.html
+++ b/src/app/features/projects/components/create-project-dialog/create-project-dialog.component.html
@@ -30,7 +30,7 @@
           id="imageSrc"
           type="text"
           pInputText
-          formControlName="imageSrc"
+          formControlName="projectImgUrl"
         />
       </div>
     </form>
