feat: add project store with filtration

--- a/src/app/features/projects/components/projects-filter/projects-filter.component.html
+++ b/src/app/features/projects/components/projects-filter/projects-filter.component.html
@@ -1,6 +1,9 @@
 <div class="p-2 bg-primary-reverse border-round">
   <div class="flex gap-2" [formGroup]="searchForm">
-    <app-project-category-dropdown formControlName="category" />
+    <app-project-category-dropdown
+      class="w-15rem p-fluid"
+      formControlName="category"
+    />
 
     <div class="search-block p-input-icon-left p-float-label">
       <i class="pi pi-search"></i>
@@ -15,11 +18,5 @@
         >Search by Technology, Language, or Topic</label
       >
     </div>
-
-    <p-button
-      [disabled]="!searchForm.valid"
-      (onClick)="search()"
-      label="Search"
-    ></p-button>
   </div>
 </div>
