--- a/src/app/features/projects/components/project-card/project-card.component.html
+++ b/src/app/features/projects/components/project-card/project-card.component.html
@@ -1,34 +1,34 @@
 @if (project) {
+  <div class="card flex flex-column p-2">
+    <app-project-category
+      class="category-badge"
+      [category]="project.category"
+    ></app-project-category>
 
-<div class="card flex flex-column p-2">
-  <app-project-category
-    class="category-badge"
-    [category]="project.category"
-  ></app-project-category>
+    <img class="w-full" [src]="project.projectImgUrl" alt="Something" />
 
-  <img class="w-full" [src]="getImageUrl()" alt="Something" />
+    <div class="text-xl my-3 font-bold">
+      {{ project.title }}
+    </div>
 
-  <div class="text-xl my-3 font-bold">
-    {{ project.title }}
+    <div class="project-description">{{ project.description }}</div>
+
+    <div class="flex justify-content-between mt-auto">
+      <p-button
+        label="View More"
+        icon="pi pi-eye"
+        (onClick)="viewProjectDetails(project.id)"
+      ></p-button>
+
+      <p-button
+        label="Positions"
+        icon="pi pi-users"
+        styleClass="p-button-secondary"
+      ></p-button>
+    </div>
   </div>
-
-  <div class="project-description">{{ project.description }}</div>
-
-  <div class="flex justify-content-between gap-2">
-    <p-button
-      label="View More"
-      icon="pi pi-eye"
-      (onClick)="viewProjectDetails(project.id)"
-    ></p-button>
-    <p-button
-      label="Positions"
-      icon="pi pi-users"
-      styleClass="p-button-secondary"
-    ></p-button>
-  </div>
-</div>
 } @else {
-<div class="custom-card">
-  <div class="loader">Loading...</div>
-</div>
+  <div class="custom-card">
+    <div class="loader">Loading...</div>
+  </div>
 }
