--- a/src/app/features/projects/components/project-card/project-card.component.scss
+++ b/src/app/features/projects/components/project-card/project-card.component.scss
@@ -3,7 +3,9 @@
   border-radius: var(--border-radius);
   box-shadow: 0 4px 8px var(--primary-color);
   overflow: hidden;
+  
   width: 328px;
+  height: 400px;
 
   .project-description {
     height: 80px;
@@ -13,6 +15,6 @@
     position: absolute;
     top: 10px;
     right: 10px;
-   
+
   }
 }
