--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -8,12 +8,8 @@
   ></p-toggleButton>
 </div>
 
-<div class="projects-container">
-  @if (projectState.isLoading()) {
-    <div class="flex justify-content-center py-5">
-      <p-skeleton width="54rem" height="6rem"></p-skeleton>
-    </div>
-  } @else if (projectState.projects()) {
+<div class="projects-container" (scroll)="onScroll($event)">
+  @if (projectState.projects()) {
     <div class="flex gap-5 flex-wrap justify-content-center py-5">
       @if (isCardView) {
         @for (project of projectState.projects(); track $index) {
@@ -24,6 +20,12 @@
           <app-project-line [project]="project"></app-project-line>
         }
       }
+    </div>
+  }
+
+  @if (projectState.isLoading()) {
+    <div class="flex justify-content-center py-5">
+      <p-skeleton width="54rem" height="6rem"></p-skeleton>
     </div>
   }
 </div>
