--- a/src/app/features/user/pages/user/user.component.html
+++ b/src/app/features/user/pages/user/user.component.html
@@ -27,11 +27,16 @@
 
     <div class="flex flex-column gap-3">
       <p-panel header="My Projects" [toggleable]="true">
-        <div class="flex flex-column gap-3">
-          @for (project of projectState.projects(); track $index) {
-            <app-project-line [project]="project"></app-project-line>
-          }
-        </div>
+        <p-scrollPanel [style]="{ width: '100%', height: '350px' }">
+          <div class="flex flex-column gap-3">
+            @for (project of projectState.projects(); track $index) {
+              <app-project-line
+                [project]="project"
+                [isRemovable]="true"
+              ></app-project-line>
+            }
+          </div>
+        </p-scrollPanel>
       </p-panel>
 
       <p-panel header="My Applications" [toggleable]="true">
