--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -24,7 +24,7 @@
   }
 
   @if (projectState.isLoading()) {
-    <div class="flex justify-content-center py-5">
+    <div class="flex justify-content-center">
       <p-skeleton width="54rem" height="6rem"></p-skeleton>
     </div>
   }
