--- a/src/app/features/projects/pages/project-page/project.component.html
+++ b/src/app/features/projects/pages/project-page/project.component.html
@@ -12,12 +12,14 @@
       <div class="col-4 flex flex-column row-gap-3">
         <p-card header="Participants">
           <p-scrollPanel [style]="{ width: '100%', height: '28rem' }">
-            @for (
-              participant of projectState.selectedProject()?.participants;
-              track $index
-            ) {
-              <app-project-participant [participant]="participant" />
-            }
+            <div class="flex flex-column gap-2">
+              @for (
+                participant of projectState.selectedProject()?.participants;
+                track $index
+              ) {
+                <app-project-participant [participant]="participant" />
+              }
+            </div>
           </p-scrollPanel>
         </p-card>
       </div>
