feat: get positions through  backend

--- a/src/app/features/positions/components/position-line/position-line.component.html
+++ b/src/app/features/positions/components/position-line/position-line.component.html
@@ -1,12 +1,12 @@
 <div class="mt-3 p-2 border-round-md border-1 border-primary shadow-5">
   <div>
-    <span class="underline cursor-pointer">{{ position.tittle }}</span>
+    <span class="underline cursor-pointer">{{ position.title }}</span>
     <span> at </span>
-    <span class="font-italic mr-2">{{ position.projectName }}</span>
+    <span class="font-italic mr-2">{{ position.project.title }}</span>
 
     <span class="text-sm text-color-secondary">
       <span class="pi pi-map-marker"></span>
-      <span>{{ position.city }}</span>
+      <span>{{ position.project.country }}</span>
     </span>
   </div>
 
