--- a/src/app/features/projects/pages/project-page/project.component.html
+++ b/src/app/features/projects/pages/project-page/project.component.html
@@ -11,7 +11,7 @@
     <div class="grid">
       <div class="col-4 flex flex-column row-gap-3">
         <p-card header="Participants">
-          <p-scrollPanel [style]="{ width: '100%', height: '28rem' }">
+          <p-scrollPanel [style]="{ width: '100%', height: '50vh' }">
             <div class="flex flex-column gap-2">
               @for (
                 participant of projectState.selectedProject()?.participants;
@@ -24,8 +24,11 @@
         </p-card>
       </div>
       <p-card class="col-8" header="Positions">
-        <p-scrollPanel [style]="{ width: '100%', height: '28rem' }">
-          @for (poistion of mockedPositions; track $index) {
+        <p-scrollPanel
+          class="h-28rem"
+          [style]="{ width: '100%', height: '50vh' }"
+        >
+          @for (poistion of positionState.positions(); track $index) {
             <app-position-line [position]="poistion" />
           }
         </p-scrollPanel>
