chore: refactor states

--- a/src/app/features/projects/components/project-line/project-line.component.html
+++ b/src/app/features/projects/components/project-line/project-line.component.html
@@ -1,5 +1,5 @@
 <div
-  class="shadow-2 surface-card border-round flex gap-2 justify-content-between p-3"
+  class="shadow-2 w-full surface-card border-round flex gap-2 justify-content-between p-3"
 >
   <img
     class="w-9rem block"
