--- a/src/app/features/positions/pages/positions/positions.component.html
+++ b/src/app/features/positions/pages/positions/positions.component.html
@@ -2,7 +2,7 @@
   <app-position-filter />
 
   <div>
-    @for (position of positionState.positions(); track $index) {
+    @for (position of state.position.data(); track $index) {
       <app-position-line [position]="position"></app-position-line>
     }
   </div>
