--- a/src/app/features/projects/pages/project-page/project.component.html
+++ b/src/app/features/projects/pages/project-page/project.component.html
@@ -1,12 +1,12 @@
-@if (projectState.isLoading()) {
+@if (state.project.isLoading()) {
   <!-- TODO replace with skeleton components -->
   <p-progressBar
     mode="indeterminate"
     [style]="{ height: '6px' }"
   ></p-progressBar>
-} @else if (projectState.selectedProject()) {
+} @else if (state.project.selected()) {
   <div class="p-3 flex flex-column gap-3">
-    <app-project-line [project]="projectState.selectedProject()!" />
+    <app-project-line [project]="state.project.selected()!" />
 
     <div class="grid">
       <div class="col-4 flex flex-column row-gap-3">
@@ -14,7 +14,7 @@
           <p-scrollPanel [style]="{ width: '100%', height: '50vh' }">
             <div class="flex flex-column gap-2">
               @for (
-                participant of projectState.selectedProject()?.participants;
+                participant of state.project.selected()?.participants;
                 track $index
               ) {
                 <app-project-participant [participant]="participant" />
@@ -28,7 +28,7 @@
           class="h-28rem"
           [style]="{ width: '100%', height: '50vh' }"
         >
-          @for (poistion of positionState.positions(); track $index) {
+          @for (poistion of state.position.data(); track $index) {
             <app-position-line [position]="poistion" />
           }
         </p-scrollPanel>
