--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -9,21 +9,21 @@
 </div>
 
 <div class="projects-container" (scroll)="onScroll($event)">
-  @if (projectState.projects()) {
+  @if (state.project.data()) {
     <div class="flex gap-5 flex-wrap justify-content-center py-5">
       @if (isCardView) {
-        @for (project of projectState.projects(); track $index) {
+        @for (project of state.project.data(); track $index) {
           <app-project-card [project]="project"></app-project-card>
         }
       } @else {
-        @for (project of projectState.projects(); track $index) {
+        @for (project of state.project.data(); track $index) {
           <app-project-line [project]="project"></app-project-line>
         }
       }
     </div>
   }
 
-  @if (projectState.isLoading()) {
+  @if (state.project.isLoading()) {
     <div class="flex justify-content-center">
       <p-skeleton width="54rem" height="6rem"></p-skeleton>
     </div>
