--- a/src/app/features/user/pages/user/user.component.html
+++ b/src/app/features/user/pages/user/user.component.html
@@ -29,7 +29,7 @@
       <p-panel header="My Projects" [toggleable]="true">
         <p-scrollPanel [style]="{ width: '100%', height: '350px' }">
           <div class="flex flex-column gap-3">
-            @for (project of projectState.projects(); track $index) {
+            @for (project of projectState.data(); track $index) {
               <app-project-line
                 [project]="project"
                 [isRemovable]="true"
