chore: refactor login component

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -31,12 +31,12 @@
       } @else {
         <p-button
           label="Log in"
-          [routerLink]="['/auth']"
+          [routerLink]="['/login']"
           [outlined]="true"
         ></p-button>
         <p-button
           label="Sign Up"
-          [routerLink]="['/auth']"
+          [routerLink]="['/register']"
           [queryParams]="{ type: '1' }"
           [outlined]="true"
           severity="secondary"
