--- a/src/app/features/user/pages/login/login.component.html
+++ b/src/app/features/user/pages/login/login.component.html
@@ -8,10 +8,20 @@
 
     <div class="my-4">Login with social account or enter your details</div>
 
-    <div class="flex gap-3 justify-content-between social-button-container">
-      <p-button icon="pi pi-google" [outlined]="true"></p-button>
-      <p-button icon="pi pi-facebook" [outlined]="true"></p-button>
-      <p-button icon="pi pi-apple" [outlined]="true"></p-button>
+    <div
+      class="flex gap-3 justify-content-between social-button-container p-fluid"
+    >
+      <p-button
+        class="p-fluid"
+        icon="pi pi-google"
+        [outlined]="true"
+      ></p-button>
+      <p-button
+        class="p-fluid"
+        icon="pi pi-facebook"
+        [outlined]="true"
+      ></p-button>
+      <p-button class="p-fluid" icon="pi pi-apple" [outlined]="true"></p-button>
     </div>
 
     <form [formGroup]="loginForm" (keyup.enter)="onSubmit()">
