--- a/src/app/features/user/pages/login/login.component.html
+++ b/src/app/features/user/pages/login/login.component.html
@@ -6,22 +6,11 @@
   <div class="col">
     <div class="text-5xl font-semibold">Login to CoduTeam</div>
 
-    <div class="my-4">Login with social account or enter your details</div>
-
-    <div
-      class="flex gap-3 justify-content-between social-button-container p-fluid"
-    >
-      <p-button
-        class="p-fluid"
-        icon="pi pi-google"
-        [outlined]="true"
-      ></p-button>
-      <p-button
-        class="p-fluid"
-        icon="pi pi-facebook"
-        [outlined]="true"
-      ></p-button>
-      <p-button class="p-fluid" icon="pi pi-apple" [outlined]="true"></p-button>
+    <div class="flex align-items-center justify-content-evenly">
+      <div>Login with social account or enter your details</div>
+      <p-button icon="pi pi-google" [outlined]="true"></p-button>
+      <p-button icon="pi pi-facebook" [outlined]="true"></p-button>
+      <p-button icon="pi pi-apple" [outlined]="true"></p-button>
     </div>
 
     <form [formGroup]="loginForm" (keyup.enter)="onSubmit()">
@@ -37,6 +26,7 @@
 
       <div class="flex flex-column gap-2 my-3">
         <p-password
+          class="p-fluid"
           [toggleMask]="true"
           placeholder="******"
           formControlName="password"
@@ -47,7 +37,7 @@
       <p-button
         label="Login"
         [disabled]="!loginForm.valid"
-        class="sign-in-button w-full"
+        class="sign-in-button p-fluid"
         [loading]="isLoading()"
         (onClick)="onSubmit()"
       ></p-button>
