--- a/src/app/features/user/pages/login/login.component.html
+++ b/src/app/features/user/pages/login/login.component.html
@@ -43,10 +43,7 @@
       ></p-button>
 
       @if (loginErrorMessages()) {
-        <p-messages
-          [value]="loginErrorMessages()"
-          [closable]="true"
-        ></p-messages>
+        <small class="p-error">{{ loginErrorMessages() }}</small>
       }
     </form>
 
