--- a/src/app/features/positions/pages/positions/positions.component.html
+++ b/src/app/features/positions/pages/positions/positions.component.html
@@ -1,15 +1,8 @@
 <div>
   <app-position-filter />
 
-  @if (state.position.isLoading()) {
-    <p-progressBar
-      mode="indeterminate"
-      [style]="{ height: '6px' }"
-    ></p-progressBar>
-  }
-
   <div>
-    @for (position of state.position.data(); track $index) {
+    @for (position of state.position.positions(); track $index) {
       <app-position-line
         (onPositionApply)="handleOnPositionApply($event)"
         [position]="position"
