--- a/src/app/features/projects/pages/project-page/project.component.html
+++ b/src/app/features/projects/pages/project-page/project.component.html
@@ -1,9 +1,4 @@
-@if (state.project.isLoading()) {
-  <!-- TODO replace with skeleton components -->
-  <p-progressBar
-    mode="indeterminate"
-    [style]="{ height: '6px' }"
-  ></p-progressBar>
+@if (state.isLoading()) {
 } @else if (state.project.selected()) {
   <div class="p-3 flex flex-column gap-3">
     <app-project-line [project]="state.project.selected()!" />
@@ -28,8 +23,8 @@
           class="h-28rem"
           [style]="{ width: '100%', height: '50vh' }"
         >
-          @for (poistion of state.position.data(); track $index) {
-            <app-position-line [position]="poistion" />
+          @for (position of state.position.positions(); track $index) {
+            <app-position-line [position]="position" />
           }
         </p-scrollPanel>
       </p-card>
