--- a/src/app/features/user/pages/user/user.component.html
+++ b/src/app/features/user/pages/user/user.component.html
@@ -1,55 +1,47 @@
-@if (user$ | async; as user) {
-  <div class="flex gap-3 pt-5">
-    <div class="flex flex-column gap-3">
-      <div class="flex p-5 surface-card border-1 border-round surface-border">
-        <p-avatar
-          image="https://source.unsplash.com/random/200x200"
-          styleClass="mr-2"
-          size="xlarge"
-          shape="circle"
-        ></p-avatar>
+<div class="flex gap-3 pt-5">
+  <div class="flex flex-column gap-3">
+    <div class="flex p-5 surface-card border-1 border-round surface-border">
+      <p-avatar
+        image="https://source.unsplash.com/random/200x200"
+        styleClass="mr-2"
+        size="xlarge"
+        shape="circle"
+      ></p-avatar>
 
-        <div class="ml-2">
-          <div class="font-semibold font-italic">
-            <span>{{ user?.firstName }} </span>
-            <span>{{ user?.lastName }}</span>
-          </div>
-          <div class="text-sm">
-            {{ user.title }}
-          </div>
+      <div class="ml-2">
+        <div class="font-semibold font-italic">
+          <span>{{ state.user.currentUser()?.firstName }} </span>
+          <span>{{ state.user.currentUser()?.lastName }}</span>
+        </div>
+        <div class="text-sm">
+          {{ state.user.currentUser()?.title }}
         </div>
       </div>
-
-      <div class="flex justify-content-center min-w-max">
-        <p-toast></p-toast>
-      </div>
     </div>
 
-    <div class="flex flex-column gap-3">
-      <p-panel header="My Projects" [toggleable]="true">
-        <p-scrollPanel [style]="{ width: '100%', height: '350px' }">
-          <div class="flex flex-column gap-3">
-            @for (project of projectState.data(); track $index) {
-              <app-project-line
-                [project]="project"
-                [isRemovable]="true"
-              ></app-project-line>
-            }
-          </div>
-        </p-scrollPanel>
-      </p-panel>
-
-      <p-panel header="My Applications" [toggleable]="true">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </p-panel>
+    <div class="flex justify-content-center min-w-max">
+      <p-toast></p-toast>
     </div>
   </div>
-}
+
+  <div class="flex flex-column gap-3">
+    <p-panel header="My Projects" [toggleable]="true">
+      <p-scrollPanel [style]="{ width: '100%', height: '350px' }">
+        <div class="flex flex-column gap-3">
+          @for (project of state.project.data(); track $index) {
+            <app-project-line
+              [project]="project"
+              [isRemovable]="true"
+            ></app-project-line>
+          }
+        </div>
+      </p-scrollPanel>
+    </p-panel>
+
+    <p-panel header="My Applications" [toggleable]="true">
+      @for (position of state.position.myApplications(); track $index) {
+        <app-position-line [position]="position" />
+      }
+    </p-panel>
+  </div>
+</div>
