--- a/src/app/features/projects/components/create-project-dialog/create-project-dialog.component.html
+++ b/src/app/features/projects/components/create-project-dialog/create-project-dialog.component.html
@@ -1,5 +1,10 @@
 <div class="card flex justify-content-center">
-  <p-dialog header="Header" [(visible)]="isShown" [style]="{ width: '50vw' }">
+  <p-dialog
+    (onHide)="closeDialog()"
+    header="Header"
+    [(visible)]="isShown"
+    [style]="{ width: '50vw' }"
+  >
     <ng-template pTemplate="header">
       <span class="text-xl font-bold">Create project</span>
     </ng-template>
