some style improvements

--- a/src/app/features/projects/components/project-card/project-card.component.html
+++ b/src/app/features/projects/components/project-card/project-card.component.html
@@ -17,7 +17,7 @@
       <p-button
         label="View More"
         icon="pi pi-eye"
-        (onClick)="projectService.viewProjectDetails(project.id)"
+        (onClick)="navigateToProject()"
       ></p-button>
 
       <p-button
