--- a/src/app/features/projects/components/create-project-dialog/create-project-dialog.component.html
+++ b/src/app/features/projects/components/create-project-dialog/create-project-dialog.component.html
@@ -8,37 +8,38 @@
     <ng-template pTemplate="header">
       <span class="text-xl font-bold">Create project</span>
     </ng-template>
-    <form [formGroup]="projectForm">
-      <div class="field">
-        <label for="title">Title</label>
-        <input id="title" type="text" pInputText formControlName="title" />
-      </div>
 
-      <div class="field">
-        <label for="description">Description</label>
-        <input
-          id="description"
-          type="text"
-          pInputText
-          formControlName="description"
-        />
-      </div>
+    <div class="p-5">
+      <form class="flex gap-4 flex-wrap" [formGroup]="projectForm">
+        <div class="p-float-label">
+          <input pInputText id="title" formControlName="title" />
+          <label for="title">Title</label>
+        </div>
 
-      <div class="field">
-        <label>Category</label>
         <app-project-category-dropdown formControlName="category" />
-      </div>
 
-      <div class="field">
-        <label for="imageSrc">Image URL</label>
-        <input
-          id="imageSrc"
-          type="text"
-          pInputText
-          formControlName="projectImgUrl"
-        />
-      </div>
-    </form>
+        <div class="p-float-label">
+          <input
+            id="imageSrc"
+            type="text"
+            pInputText
+            formControlName="projectImgUrl"
+          />
+          <label for="imageSrc">Image URL</label>
+        </div>
+
+        <div class="p-float-label">
+          <textarea
+            rows="5"
+            cols="65"
+            pInputTextarea
+            id="description"
+            formControlName="description"
+          ></textarea>
+          <label for="description">Description</label>
+        </div>
+      </form>
+    </div>
 
     <ng-template pTemplate="footer">
       <p-button
