--- a/src/app/features/projects/components/project-line/project-line.component.html
+++ b/src/app/features/projects/components/project-line/project-line.component.html
@@ -1,27 +1,21 @@
 <div
-  class="shadow-2 w-full surface-card border-round flex gap-2 justify-content-between p-3"
+  class="project-line shadow-2 surface-card border-round flex justify-content-evenly p-3"
 >
-  <img
-    class="w-9rem block"
-    [src]="project?.projectImgUrl"
-    alt="Project photo"
-  />
+  <img class="w-2 block" [src]="project?.projectImgUrl" alt="Project photo" />
 
-  <div class="w-13rem flex flex-column justify-content-between">
+  <div class="w-2 flex flex-column justify-content-between">
     <div
       class="font-italic underline cursor-pointer"
-      (click)="projectService.viewProjectDetails(project?.id!)"
+      (click)="navigateToProject()"
     >
-      {{ project?.title }}
+      {{ title }}
     </div>
     <div class="text-sm">{{ project?.category }}</div>
   </div>
 
-  <div class="w-20rem">
-    {{ project?.description }}
-  </div>
+  <div class="w-5">{{ description }}</div>
 
-  <div class="w-9rem flex flex-column align-items-end justify-content-between">
+  <div class="w-2 flex flex-column align-items-end justify-content-between">
     <div class="underline text-sm">
       {{ project?.category }}
     </div>
@@ -40,10 +34,6 @@
   </div>
 
   @if (isRemovable) {
-    <i
-      class="pi pi-trash cursor-pointer"
-      style="font-size: 2rem"
-      (click)="removeProject()"
-    ></i>
+    <i class="pi pi-trash cursor-pointer" (click)="removeProject()"></i>
   }
 </div>
